tests/ui/parser/issue-12187-1.rs
fn new<T>() -> &'static T {
    panic!()
}

fn main() {
    let &v = new();
    //~^ ERROR type annotations needed
}
